--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,10 +1,14 @@
 {% extends "base/base.html" %}
 
+{% load static %}  <!-- 이 부분이 추가되어야 합니다. -->
+
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container text-center my-5">
-    <h1 class="mb-4">Stock Predictor</h1>
+<div class="container text-center my-2">
+    <h1 class="mb-5">
+        <img src="{% static 'images/logo.png' %}" alt="Logo" style="height: 170px; vertical-align: middle;">
+    </h1>
     <p class="lead mb-5">아래 버튼을 클릭하여 주식 가격 예측, 주식 추천, 또는 모델 성능을 확인해보세요.<br>해당 프로그램은 최신 데이터를 기반으로 주식 시장 분석을 돕고, 투자 결정을 지원합니다.<br>로그인을 하시면 관심종목을 추가하여 관리할 수 있습니다.</p>
 
     <!-- 버튼 컨테이너 -->
