--- a/base/templates/base/model_performance.html
+++ b/base/templates/base/model_performance.html
@@ -1,68 +1,66 @@
 {% extends "base/base.html" %}
+{% load static %}
 
 {% block title %}Model Performance{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/model_performance.css' %}">
 <div class="container mt-5 text-center">
     <h1 class="mb-4">Model Performance</h1>
 
-    <div class="row justify-content-center">
+    <div class="performance-tables">
         <!-- 5% 상승 예측 모델 성능 -->
-        <div class="col-md-6">
-            <div class="performance-table">
-                <h3>5% 상승 예측 모델</h3>
-                <table class="table table-bordered table-hover mx-auto" style="max-width: 500px;">
-                    <thead style="background-color: #007bff; color: white;">
-                        <tr>
-                            <th class="text-center">Metric</th>
-                            <th class="text-center">Value</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="text-center">Accuracy</td>
-                            <td class="text-center">{{ predict_5_performance.accuracy }}</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">Precision</td>
-                            <td class="text-center">{{ predict_5_performance.precision }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div class="performance-table">
+            <h3>5% 상승 예측 모델</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="text-center">Metric</th>
+                        <th class="text-center">Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-center">Accuracy</td>
+                        <td class="text-center">{{ predict_5_performance.accuracy }}</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">Precision</td>
+                        <td class="text-center">{{ predict_5_performance.precision }}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
         <!-- 5% 하락 예측 모델 성능 -->
-        <div class="col-md-6">
-            <div class="performance-table">
-                <h3>5% 하락 예측 모델</h3>
-                <table class="table table-bordered table-hover mx-auto" style="max-width: 500px;">
-                    <thead style="background-color: #007bff; color: white;">
-                        <tr>
-                            <th class="text-center">Metric</th>
-                            <th class="text-center">Value</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="text-center">Accuracy</td>
-                            <td class="text-center">{{ minus_predict_performance.accuracy }}</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">Precision</td>
-                            <td class="text-center">{{ minus_predict_performance.precision }}</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">Recall</td>
-                            <td class="text-center">{{ minus_predict_performance.recall }}</td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">F1 Score</td>
-                            <td class="text-center">{{ minus_predict_performance.f1_score }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div class="performance-table">
+            <h3>5% 하락 예측 모델</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="text-center">Metric</th>
+                        <th class="text-center">Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-center">Accuracy</td>
+                        <td class="text-center">{{ minus_predict_performance.accuracy }}</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">Precision</td>
+                        <td class="text-center">{{ minus_predict_performance.precision }}</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">Recall</td>
+                        <td class="text-center">{{ minus_predict_performance.recall }}</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">F1 Score</td>
+                        <td class="text-center">{{ minus_predict_performance.f1_score }}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
