--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,42 +1,40 @@
 {% extends "base/base.html" %}
+{% load static %}
 
 {% block title %}Login{% endblock %}
 
+{% block extra_css %}
+<!-- custom login.css 파일을 로드 -->
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock %}
+
 {% block content %}
-<div class="container mt-8" style="max-width: 800px; width: 100%; margin: 0 auto;">
-    <div class="row justify-content-center">
-        <div class="col-md-40 col-lg-40 col-xl-40"> <!-- 컬럼 너비를 조정 -->
-            <div class="card">
-                <div class="card-header text-center">
-                    <h3>로그인</h3>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        <div class="form-group mb-3">
-                            {{ form.username.label_tag }}
-                            {{ form.username }}
-                        </div>
-                        <div class="form-group mb-3 position-relative">
-                            {{ form.password.label_tag }}
-                            {{ form.password }}
-                            <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);">
-                                <i class="bi bi-eye-slash" id="togglePassword" style="cursor: pointer;"></i>
-                            </span>
-                        </div>
-                        <div class="form-group form-check mb-2">
-                            {{ form.remember_me }}
-                            {{ form.remember_me.label_tag }}
-                            <div class="d-flex justify-content-between">
-                                <a href="{% url 'password_reset' %}">비밀번호 찾기</a>
-                                <a href="{% url 'register' %}">회원가입</a> <!-- 회원가입 링크 추가 -->
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">로그인</button>
-                    </form>
-                </div>
+<div class="login-container">
+    <div class="login-card">
+        <h3 class="login-title">로그인</h3>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username }}
             </div>
-        </div>
+            <div class="form-group position-relative">
+                {{ form.password.label_tag }}
+                {{ form.password }}
+                <span class="toggle-password" id="togglePassword">
+                    <i class="bi bi-eye-slash"></i>
+                </span>
+            </div>
+            <div class="form-group form-check">
+                {{ form.remember_me }}
+                {{ form.remember_me.label_tag }}
+            </div>
+            <div class="form-links">
+                <a href="{% url 'password_reset' %}">비밀번호 찾기</a>
+                <a href="{% url 'register' %}">회원가입</a>
+            </div>
+            <button type="submit" class="btn-submit">로그인</button>
+        </form>
     </div>
 </div>
 
